--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,10 +1,13 @@
+{% extends 'music/base.html' %}
 
-{% if all_Albums %}
-    <ul>
-        {% for album in all_Albums %}
-            <li><a href="{% url 'music:detail' album.id %}"> {{ album.album_title }} </a></li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <h1>No Albums exist!</h1>
-{% endif %}
+{% block body %}
+    {% if all_Albums %}
+        <ul>
+            {% for album in all_Albums %}
+                <li><a href="{% url 'music:detail' album.id %}"> {{ album.album_title }} </a></li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <h1>No Albums exist!</h1>
+    {% endif %}
+{% endblock %}
