end of the tutorial

--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -4,7 +4,12 @@
     {% if all_Albums %}
         <ul>
             {% for album in all_Albums %}
+                <img src="{{ album.album_logo.url }}">
                 <li><a href="{% url 'music:detail' album.id %}"> {{ album.album_title }} </a></li>
+                <form action="{% url 'music:album-delete' album.id %}" method="post" style="display: inline">
+                    {% csrf_token %}
+                    <button type="submit" style="color: red">Delete</button>
+                </form>
             {% endfor %}
         </ul>
     {% else %}
