--- a/music/static/music/style.css
+++ b/music/static/music/style.css
@@ -1,5 +1,72 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 body{
-    background-color: black;
+  background: url(img/download.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
+.model-dialog{
+  margin-top: 150px;
+  margin-left:200px;
+}
+.main-section{
+  margin:0 auto;
+  margin-top: 150px;
+  padding: 0;
+}
+.model-content{
+  background-color: #AEB2BF;
+  opacity: 0.7;
+  padding: 0 18px;
+  box-shadow: 0px 0px 3px #848484;
+}
+.user-img img{
+  margin-top: -50px;
+  margin-bottom: 35px;
+  height: 100px;
+  width: 150px;
+  border-radius: 5px;
+  box-shadow:0px 0px 2px #848484;
+}
 
+.form-group input{
+  margin-bottom: 15px;
+  height:42px;
+  border-radius: 20px;
+  border: 0;
+  font-size: 15px;
+  padding-left: 54px;
+}
+.form-group::before{
+  font-family:'Font Awesome\ 5 Free';
+  content:"\f007";
+  position:absolute;
+  font-size:22px;
+  color:#555e60;
+  left:20px;
+  padding-top: 4px;
+}
+.form-group:last-of-type::before{
+  content: "\f023";
+}
 
+button{
+  width:  40%;
+  margin: 5px 0 25px;
+}
+.btn{
+  background-color: #27c2a5;
+  color: #fff;
+  font-size: 19px;
+  padding: 7px 14px;
+  border-radius: 5px;
+  border-bottom: 4px solid #219882;
+}
+.btn:hover,btn:focus{
+  background-color: #25a890;
+  border-bottom: 4px solid #25a890!important;
+}
+.forget {
+  padding: 5px 0 25px;
+}
+.forget a{
+  color:#0B217C;
 }
