--- a/music/templates/music/base.html
+++ b/music/templates/music/base.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
-{% load staticfiles %}
-<link rel="stylesheet" type="text/css" href="{% static 'music/style.css' %}">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'music/style.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <title>{% block title %}Home Page{% endblock %}</title>
+</head>
 <body>
-
+<ul>
+    <li><a href="{% url 'music:album-add' %}">Add Album</a></li>
+</ul>
 {% block body %}
 {% endblock %}
 
