--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -1,7 +1,7 @@
 {% extends 'music/base.html' %}
 
 {% block body %}
-    <img src={{ album.album_logo }}>
+    <img src={{ album.album_logo.url }}>
 
     <h1>Album : {{ album.album_title }}</h1>
     <h3>{{ album.artist }}</h3>
@@ -10,17 +10,10 @@
         <p><s>{{ error_message }}</s></p>
     {% endif %}
 
-    <form action="{% url 'music:favorite' album.id %}" method="post">
-        {% csrf_token %}
-        {% for song in album.song_set.all %}
-            <input type="radio" id="song{{ forloop.counter }}" name="song" value="{{ song.id }}">
-            <label for="song{{ forloop.counter }}">
-                {{ song.song_title }}
-                {% if song.is_favorite %}
-                    <img src="http://i.imgur.com/b9b13Rd.png">
-                {% endif %}
-            </label><br>
-        {% endfor %}
-        <input type="submit" value="Favorite">
-    </form>
+    <ul>
+    {% for song in album.song_set.all %}
+        <li>{{ song.song_title }}</li>
+    {% endfor %}
+    </ul>
+
 {% endblock %}
